# coloform

./: Makefile  README.md  pyproject.toml
.github/actions/: release.yaml
.github/workflows/: build.yaml  release.yaml
coloform/: __about__.py  demo.py
colorado/: __about__.py  __init__.py  ansi.py  demo.py
