[project]
name = 'colorado'
readme = 'README.md'
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: POSIX :: Linux',
    'Development Status :: 1 - Planning',
]
dependencies = [
    'colorama',
]
dynamic = ['description', 'version', 'authors', 'maintainers']

[project.optional-dependencies]
dev = [
    'autopep8',
    'isort',
    'mypy',
    'ruff',
    'types-colorama',
    'uv',
]

[project.urls]
Repository = "https://github.com/FynnFreyer/colorado"
Issues = "https://github.com/FynnFreyer/colorado/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
description = { path = "colorado/__about__.py" }
version = { path = "colorado/__about__.py" }
authors = { path = "colorado/__about__.py" }
maintainers = { path = "colorado/__about__.py" }

# Formatting options
[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true

[tool.isort]
src_paths = ['colorado']
line_length = 120

# Linting options
[tool.ruff]
line-length = 120
src = ['colorado']

show-fixes = true

[tool.ruff.lint]
select = ['E', 'F', 'B', 'Q']
mccabe = { max-complexity = 10 }
